fix scorepad in dark mode

--- a/src/championship-table.scss
+++ b/src/championship-table.scss
@@ -170,6 +170,7 @@ html[data-theme="dark"] {
 
         &.score {
           font-size: 24pt;
+          color: black;
         }
 
         .name {
