--- a/src/heat.scss
+++ b/src/heat.scss
@@ -414,6 +414,6 @@ html[data-theme="dark"] {
   background-color: #ef9a9a;
 }
 
-.player-name a:first-of-type[style*="color: #ffffff"], span[style*="color: #ffffff"] {
+.player-name a:first-of-type[style*="color: #ffffff"], span[style*="color: #ffffff"], strong[style*="color: #ffffff"] {
     text-shadow: 0 0 1px black, 0 0 2px black, 0 0 3px black; 
 }
